// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationPills should render 1`] = `
<Styled(PillTabs)
  onChange={[Function]}
  options={
    [
      {
        "id": "Now",
        "render": [Function],
        "title": "Start date",
      },
      {
        "id": "PreviousAnswer",
        "render": [Function],
        "title": "Previous answer",
      },
      {
        "id": "Metadata",
        "render": [Function],
        "title": "Metadata",
      },
      {
        "id": "Custom",
        "render": [Function],
        "title": "Custom",
      },
    ]
  }
  value="PreviousAnswer"
/>
`;

exports[`ValidationPills should render custom 1`] = `
<div
  className="sc-jSMfEi hLJfUr"
>
  <Custom />
</div>
`;

exports[`ValidationPills should render if missing an option component 1`] = `
<Styled(PillTabs)
  onChange={[Function]}
  options={
    [
      {
        "id": "Now",
        "render": [Function],
        "title": "Start date",
      },
      {
        "id": "PreviousAnswer",
        "render": [Function],
        "title": "Previous answer",
      },
      {
        "id": "Custom",
        "render": [Function],
        "title": "Custom",
      },
    ]
  }
  value="PreviousAnswer"
/>
`;

exports[`ValidationPills should render metadata 1`] = `
<div
  className="sc-jSMfEi hLJfUr"
>
  <Metadata />
</div>
`;

exports[`ValidationPills should render previous answer 1`] = `
<div
  className="sc-jSMfEi hLJfUr"
>
  <PreviousAnswer />
</div>
`;

exports[`ValidationPills should render startDate 1`] = `
<div
  className="sc-jSMfEi hLJfUr"
>
  <Now />
</div>
`;
